Updating service handler
